[package]
name = "matching-engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "matching_engine"
path = "src/lib.rs"

[[bin]]
name = "matching-engine"
path = "src/main.rs"

[dependencies]
# Phase 1 では標準ライブラリのみで構築
# Phase 2 で fxhash, crossbeam, parking_lot などを追加予定

[dev-dependencies]
# 統合テスト（tests/*.rs）用。現時点では標準ライブラリのみ。