[package]
name = "matching-engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "matching_engine"
path = "src/lib.rs"

[[bin]]
name = "matching-engine"
path = "src/main.rs"

[dependencies]
rustc-hash = "1.1"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "engine_benches"
path = "tests/engine_benches.rs"
harness = false